--- a/src/global.scss
+++ b/src/global.scss
@@ -59,3 +59,15 @@
         border-radius: 15px;
     }
 }
+
+body {
+    hr {
+        display: none;
+    }
+}
+
+main {
+    width: 1024px;
+    margin-left: auto;
+    margin-right: auto;
+}
