--- a/src/main.scss
+++ b/src/main.scss
@@ -1,2 +1,3 @@
-@import url(global.scss);
-@import url(header.scss);
+@import url('global.scss');
+@import url('header.scss');
+@import url('home.scss');
