--- a/src/global.scss
+++ b/src/global.scss
@@ -1,10 +1,3 @@
-
-:root {
-    --primary-color: #eb584d;
-    --secondary-color: #fccfd3;
-    --black: #141413;
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -67,7 +60,7 @@ body {
 }
 
 main {
-    width: 1024px;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
 }
