--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,5 @@
+@import url('colors.scss');
 @import url('global.scss');
 @import url('header.scss');
 @import url('home.scss');
+@import url('fonts.scss');
