--- a/src/home.scss
+++ b/src/home.scss
@@ -2,6 +2,10 @@ body {
     background-color: var(--background-white);
 }
 
+body.sidebar-active {
+    overflow: hidden;
+}
+
 
 .home_div {
 
@@ -195,4 +199,163 @@ main {
 
         }
     }
+
+    #sidebar {
+        position: fixed;
+        display: block;
+        -webkit-transform: translateZ(0);
+        bottom: 0;
+        right: 0;
+        width: 40%;
+        height: 100%;
+        background-color: var(--background-white);
+        z-index: 99;
+        transform: translateX(110%);
+        transition: all 0.3s ease-in-out;
+        -webkit-box-shadow: 5px 5px 15px 5px #7D7D7D; 
+        box-shadow: 5px 5px 15px 5px var(--marquee-background);  
+        overflow-y: scroll;
+
+        a {
+            position: fixed;
+        }
+
+        svg {
+            transform: rotateZ(45deg);
+        }
+
+        .content {
+            h2 {
+                color: black;
+                font-size: 36px;
+                font-family: Roboto;
+                font-weight: 900;
+                word-wrap: break-word;
+                margin-top: 5vw;
+            }
+
+            h3 {
+                color: black;
+                font-size: 28px;
+                font-family: Roboto;
+                font-weight: 400;
+                word-wrap: break-word;
+                margin-top: 2vw;
+            }
+
+            #slidetech {
+                color: black;
+                font-size: 24px;
+                font-family: Roboto;
+                font-style: italic;
+                font-weight: 300;
+                word-wrap: break-word;
+                margin-top: 1vw;
+            }
+
+            .expo_content {
+                margin-top: 4vw;
+                font-family: 'Roboto', sans-serif;
+
+                p{
+                font-family: 'Roboto', sans-serif;
+                }
+                
+                
+            }
+
+        }
+    }
+
+    #sidebar.active {
+        transform: translateX(0%);
+        transition: all 0.3s ease-in-out;
+    }
+
 }
+
+.marquee {
+    display: flex;
+    justify-content: flex-start;
+    background-color: var(--marquee-background);
+    overflow: hidden;
+    margin-top: 5vw;
+
+    p {
+        color: white;
+        font-size: 64px;
+        font-family: Roboto;
+        font-style: italic;
+        font-weight: 200;
+        text-transform: uppercase;
+        white-space: nowrap;
+        padding: 0 2vw;
+        letter-spacing: 1px;
+        animation: marquee 5s linear infinite;
+    }
+
+    &:hover {
+        animation-play-state: paused;
+    }
+
+}
+  @keyframes marquee {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(-100%); }
+  }
+
+
+  .rdv {
+    width: 1280px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    margin-top: 3vw;
+
+    .event {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        justify-content: space-around;
+
+
+        .type {
+            display: flex;
+            justify-items: center;
+            align-items: center;       
+            color: black;
+            font-size: 24px;
+            font-family: Roboto;
+            font-weight: 300;
+            word-wrap: break-word;
+
+            p {
+                margin-left: 1vw;
+            }
+        }
+
+        .name {
+            display: flex;
+            align-items: center;
+            justify-items: center;
+            color: black;
+            font-size: 24px;
+            font-family: Roboto;
+            font-weight: 400;
+            word-wrap: break-word;
+        }
+
+        .date {
+            display: flex;
+            align-items: center;
+            justify-items: center;
+            color: black;
+            font-size: 24px;
+            font-family: Roboto;
+            font-weight: 300;
+            word-wrap: break-word;
+
+        }
+    }
+  }
