Home page complete

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,5 +1,7 @@
-@import url('colors.scss');
-@import url('global.scss');
-@import url('header.scss');
-@import url('home.scss');
-@import url('fonts.scss');
+@import url('scss/colors.scss');
+@import url('scss/global.scss');
+@import url('scss/header.scss');
+@import url('scss/home.scss');
+@import url('scss/fonts.scss');
+@import url('scss/footer.scss');
+@import url('scss/events.scss');
