--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -6,3 +6,11 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Swomun';
+    src: url('./fonts/swomun-serif.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
