fin de journée, page home complete + debut expositions

--- a/src/main.scss
+++ b/src/main.scss
@@ -2,6 +2,6 @@
 @import url('scss/global.scss');
 @import url('scss/header.scss');
 @import url('scss/home.scss');
-@import url('scss/fonts.scss');
 @import url('scss/footer.scss');
 @import url('scss/events.scss');
+@import url('fonts.scss');
