--- a/src/scss/events.scss
+++ b/src/scss/events.scss
@@ -1,6 +1,7 @@
 .top {
 
     background-color: var(--background-white);
+    position: static;
     h1 {
         font-family: 'Swomun';
         color: var(--black);
@@ -8,5 +9,22 @@
         font-size: 200px;
         font-weight: 400;
         word-wrap: break-word;
+        text-align: center;
     }
+
+    #year {
+        position: absolute;
+        left: 715;
+        top: 125;
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid #D9D9D9;
+        width: 200px;
+        text-align: center;
+        color: black;
+        font-size: 20px;
+        font-family: Roboto;
+        font-weight: 400;
+        }
+    
 }
