--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -455,3 +455,16 @@ main {
     margin: 0 auto;
     max-width: 100%;
   }
+
+  .transition {
+    position: absolute;
+    z-index: 999;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+    background-color: #fff;
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+}
