--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -16,6 +16,7 @@
     width: 100%;
     z-index: 8;
     transition: all 0.3s ease-in-out;
+    top: 0;
 
     &>a>svg {
         fill: var(--white);
