--- a/src/scss/events.scss
+++ b/src/scss/events.scss
@@ -1,6 +1,6 @@
 .top {
     background-color: var(--background-white);
-    position: static;
+    position: relative;
     h1 {
         font-family: 'Swomun';
         color: var(--black);
@@ -15,7 +15,7 @@
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
-        top: 220px;
+        top: 140px;
         padding: 10px;
         border-radius: 5px;
         border: 1px solid #D9D9D9;
