--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,16 +1,16 @@
 footer {
     width: 100%;
-    height: 250px;
     background-color: var(--background-white);
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 
     .parent_footer {
         display: flex;
         flex-direction: row;
         width: 1280px;
-        margin: 0 auto;
+        margin: 80px auto 0;
         position: relative;
         justify-content: center;
         align-items: center;
@@ -25,8 +25,8 @@ footer {
         }
 
         .facebook_footer {
-            height: 5vh;
-            width: 5vh;
+            height: 91px;
+            width: 91px;
             background-color: var(--black);
             padding: 25px;
             border-radius: 25%;
@@ -41,6 +41,7 @@ footer {
             position: relative;
             display: flex;
             flex-direction: column;
+            line-height: 1;
 
             #saison {
                 color: var(--grey);
@@ -55,6 +56,24 @@ footer {
                 transform: rotateZ(9deg);
             }
         }
+    }
+
+    .footer_links {
+        font-family: 'Roboto', sans-serif;
+        width: 1280px;
+        margin: 64px auto 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+       a {
+        text-decoration: none;
+        color: black;
+
+        &:hover {
+            color: black;
+            text-decoration: underline;
+        }
+       }
     }
 }
 
