--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,5 +1,6 @@
 body {
     background-color: var(--background-white);
+    line-height: 1.4;
 }
 
 body.sidebar-active {
@@ -8,6 +9,16 @@ body.sidebar-active {
 
 body:not(.home){
     padding-top: 80px;
+
+    &.fermeture_exceptionnelle {
+        padding-top: 156px;
+    
+        .vertical_bar {
+            h2 {
+                top: 100px;
+            }
+        }
+    }
 }
 
 
@@ -22,13 +33,13 @@ body:not(.home){
 
     .logo_cover {
         background-color: #FFFFFF;
-        padding: 2vw;
         border-radius: 50%;
-        width: 6vw;
-        height: 6vw;
+        width: 150px;
+        height: 150px;
         display: flex;
         align-items: center;
         justify-content: center;
+        flex-shrink: 0;
 
         img {
         width: 5vw;
@@ -44,7 +55,8 @@ body:not(.home){
         font-weight: 900;
         font-size: 68px;
         color: var(--white);
-        width: 525px
+        width: 525px;
+        line-height: 1;
     }
 
     p {
@@ -52,7 +64,8 @@ body:not(.home){
         font-family: 'Roboto', sans-serif;
         font-weight: 300;
         font-size: 20px;
-        width: 50%;
+        width: 680px;
+        margin-top: 32px;
     }
 }
 
@@ -65,6 +78,7 @@ body:not(.home){
     height: 100vh;
     display: flex;
     z-index: 0;
+    position: relative;
 
 }
 
@@ -224,14 +238,9 @@ main {
     z-index: 99;
     transform: translateX(110%);
     transition: all 0.3s ease-in-out;
-    overflow-y: scroll;
 
     a {
         position: fixed;
-    }
-
-    svg {
-        transform: rotateZ(45deg);
     }
 
     .content {
@@ -241,7 +250,6 @@ main {
             font-family: Roboto;
             font-weight: 900;
             word-wrap: break-word;
-            margin-top: 5vw;
         }
 
         h3 {
@@ -272,10 +280,6 @@ main {
             }
             
             
-        }
-
-        .infos {
-            margin-left: 20px;
         }
 
     }
@@ -476,4 +480,125 @@ main {
     background-color: #fff;
     -webkit-transform: scaleY(0);
     transform: scaleY(0);
+}
+
+@media only screen and (max-width: 768px) { 
+
+    body {
+        width: 100%;
+        position: absolute;
+    }
+
+    .cover_banner {
+        width: 100%;
+        height: 600px;
+    }
+
+        .home_div_text {
+            width: 100%;
+            h1 {
+                font-size: 38px;
+                width: 100%;
+                text-align: center;
+            }
+        }
+
+        .home_div {
+            flex-direction: column-reverse;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            margin: 270px 0;
+            .logo_cover {
+                margin-top: 30px;
+                padding: 30px;
+                img {
+                    width: 80px;
+                }
+            }
+
+            .home_div_text {
+                p {
+                    display: none;
+                }
+            }
+        }
+
+        .last_expo {
+            flex-direction: column !important;
+            .cover_expo {
+                width: 285px !important;
+                margin: 0 auto;
+                margin-top: 2vh;
+                img {
+                    width: 30vh;
+                    height: auto;
+                    border-radius: 15px !important;
+                }
+            }
+            .text_expo {
+                width: 100% !important;
+
+                .dates {
+                    p {
+                        font-size: 16px !important;
+                    }
+                    
+                }
+
+                #additional_txt {
+                    font-size: 12px !important;
+                }
+
+                h2 {
+                    font-size: 18px !important;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+
+                h3 {
+                    font-size: 20px !important;
+                }
+
+                #techniques {
+                    font-size: 12px !important;
+                    padding-bottom: 48px;
+                }
+            }
+        }
+
+        #badge {
+            width: 120px !important;
+            transform: translateY(-355px) translateX(100%);
+            font-size: 14px !important;
+            position: absolute;
+        }
+
+        .facebook_footer {
+            transform: translateX(2%) !important;
+        }
+
+        .wrap_center {
+            padding-left: 0;
+        }
+
+        main {
+            margin-top: 32px;
+            .last_expo {
+                .cover_expo{
+                    img {
+                        width: 100%;
+                        margin: 0 auto;
+                    }
+                }
+            }
+        }
+
+        .rdv {
+            .element {
+                
+            }
+        }
+
 }
